2-Traffic-Redirection-with-Bookinfo/10-productpage-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-vs
  namespace: bookinfo
spec:
  hosts:
  # - "*"
  - "bookinfo.com" # For this please make an entry in /etc/hosts
  gateways:
  - bookinfo-ingress-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
    headers:
      response:
        add:
          custom-header: CUSTOM_HEADER_PRODUCTPAGE
