2-Traffic-Redirection-with-Bookinfo/12-client-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: client-vs
  namespace: bookinfo
spec:
  hosts:
  - "myclient.bookinfo.com" # For this please make an entry in /etc/hosts
  gateways:
  - bookinfo-ingress-gateway
  http:
  - match:
    - uri:
        exact: /http
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ec2-3-125-207-155.eu-central-1.compute.amazonaws.com
        port:
          number: 80
  - match:
    - uri:
        exact: /https
    rewrite:
      uri: "/api/portfolio"
      # uri: "/api/portfolio?username=riteshbangal"
    route:
    - destination:
        host: app-gw.eintuition.net
        port:
          number: 443
  - match:
    - uri:
        exact: /mtls
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ec2-3-125-207-155.eu-central-1.compute.amazonaws.com
        port:
          number: 443
        #subset: mtls-connection
